@@ -1,3 +1,4 @@
+0.92.1-0 @03/07/2005 22:30:00 UTC@
 0.92.0-0 @01/18/2005 16:05:00 UTC@
 0.91.0-0 @12/23/2004 22:35:00 UTC@
 0.22.0-0 @12/21/2004 16:10:00 UTC@
